--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,3 +11,8 @@ a {
 .btn {
     font-family: 'IBM Plex Sans KR', sans-serif;
 }
+
+.dropdown-item:hover {
+    background-color: black !important;
+    color: white !important;
+}
