#149 [init - signup] 회원 가입 프론트 구현

--- a/src/main/resources/static/css/user-input.css
+++ b/src/main/resources/static/css/user-input.css
@@ -18,6 +18,15 @@ input {
     height: 50px;
 }
 
+.input-group-text {
+    height: 50px;
+    margin-top: 10px;
+}
+
+.custom-btn {
+    height: 50px;
+}
+
 .logo {
     width: 16px;
     height: 16px;
