#172 [update-shows] 공연 상세 정보 페이지 구현

--- a/src/main/resources/static/css/grade.css
+++ b/src/main/resources/static/css/grade.css
@@ -116,3 +116,8 @@ body {
     border-color: #cccccc;
     cursor: not-allowed;
 }
+
+#gradesTable .saveRowBtn.saved {
+    background-color: #6c757d; /* 부트스트랩의 회색 */
+    border-color: #6c757d;
+}
