--- a/src/main/resources/static/css/place.css
+++ b/src/main/resources/static/css/place.css
@@ -24,7 +24,7 @@ input[type="number"] {
     width: 100%;
     padding: 10px;
     margin-top: 5px;
-    border: 1px solid #ddd;
+    border: 1px solid black;
     border-radius: 4px;
     box-sizing: border-box;
 }
@@ -43,7 +43,7 @@ th {
     background-color: #f8f8f8;
 }
 /* 버튼 스타일 */
-button {
+.place-btn-div > .place-btn {
     padding: 10px 15px;
     margin-top: 20px;
     border: none;
@@ -53,15 +53,44 @@ button {
     cursor: pointer;
     transition: background-color 0.3s;
 }
-button:hover {
-    background-color: #4cae4c;
+.place-btn-div > .place-btn:hover {
+    background-color: #8637DF;
+    color: white;
 }
 
-/* 구역 제거 버튼 스타일 */
-.remove-zone {
-    background-color: #d9534f;
+#createPlaceButton {
+    border: 1px solid #FADAD8;
+    background-color: #FADAD8;
     color: white;
-    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+#createPlaceButton:hover {
+    background-color: #FADAD8;
+    color: white;
+}
+
+#showsInfoPage {
+    background-color: #A593E0;
+    color: white;
+    padding: 10px 15px;
+    border: 1px solid #A593E0;
+    cursor: pointer;
+    float: right;
+}
+
+#showsInfoPage:hover {
+    background-color: #A593E0;
+    color: white;
+}
+
+
+/* 구역 제거 버튼 스타일 */
+#zonesTable > tbody > tr > td > .remove-zone {
+    border: 1px solid red;
+    background-color: red;
+    color: white;
     padding: 5px 10px;
     cursor: pointer;
     margin-top: 5px;
@@ -71,7 +100,7 @@ button:hover {
 }
 
 /* 다음 페이지 버튼 스타일 */
-#showsInfoPageButton {
+.place-btn-div >#showsInfoPageButton {
     float: right;
     padding: 10px 15px;
     background-color: #337ab7; /* Bootstrap primary blue */
@@ -82,7 +111,7 @@ button:hover {
     transition: background-color 0.3s;
 }
 
-#showsInfoPageButton:hover {
+.place-btn-div >#showsInfoPageButton:hover {
     background-color: #286090;
 }
 
