--- a/src/main/resources/static/css/shows-details.css
+++ b/src/main/resources/static/css/shows-details.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: whitesmoke;
 }
 
 header {
@@ -19,7 +19,7 @@ header {
     flex: 0 0 70%; /* 상품 정보 컨테이너의 너비를 70%로 고정 */
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
+    background-color: whitesmoke;
 }
 
 
@@ -55,7 +55,7 @@ header {
     flex: 0 0 30%; /* 캘린더 컨테이너의 너비를 30%로 고정 */
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
+    background-color: whitesmoke;
     /* 캘린더의 최소 너비를 설정하여 내용이 잘리지 않도록 합니다. 필요에 따라 조절하세요. */
     min-width: 300px;
 }
@@ -84,11 +84,11 @@ header {
 .images-list img {
     width: 80px;
     height: auto;
-    border: 1px solid #ddd;
+    border: 1px solid whitesmoke;
 }
 
 #book-btn {
-    background-color: #007bff;
+    background-color: blue;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -98,7 +98,7 @@ header {
 }
 
 #book-btn:hover {
-    background-color: #0056b3;
+    background-color: blue;
 }
 
 /* FullCalendar 스타일링 */
@@ -111,7 +111,7 @@ header {
 }
 
 .fc-button {
-    background-color: #007bff;
+    background-color: skyblue;
     color: white;
     margin-right: 5px;
     padding: 5px 10px;
@@ -122,7 +122,7 @@ header {
 }
 
 .fc-button:hover {
-    background-color: #0056b3;
+    background-color: blue;
 }
 
 .fc {
