--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -40,7 +40,7 @@ input {
 
 table {
     width: 100%;
-    border-top: 1px solid #dddddd;
+    border-top: 1px solid whitesmoke;
     border-collapse: collapse;
 }
 
@@ -49,7 +49,7 @@ thead {
 }
 
 th, td {
-    border-bottom: 1px solid #dddddd;
+    border-bottom: 1px solid whitesmoke;
     padding: 10px;
 }
 
