--- a/src/main/resources/static/css/payment.css
+++ b/src/main/resources/static/css/payment.css
@@ -23,7 +23,7 @@
     margin-right: 10px;
 }
 .user-input-div-2 > .user-input-btn-2 {
-    background-color: #A9BCD0;
+    background-color: gray;
     color: white;
     cursor: pointer;
 }
