--- a/src/main/resources/static/css/user-input.css
+++ b/src/main/resources/static/css/user-input.css
@@ -35,13 +35,13 @@ input {
 }
 
 .user-input-div > .user-input-btn {
-    background-color: #D1C2E9;
+    background-color: rosybrown;
     color: white;
     cursor: pointer;
 }
 
 .user-input-div-2 > .user-input-btn-2 {
-    background-color: #A9BCD0;
+    background-color: skyblue;
     color: white;
     cursor: pointer;
 }
