#177 [View] 링크 연결 완료, css 수정 오나료

--- a/src/main/resources/static/css/zone-grade.css
+++ b/src/main/resources/static/css/zone-grade.css
@@ -40,3 +40,8 @@
     background-color: whitesmoke;
     cursor: not-allowed;
 }
+
+#zone-grade-table > tbody > tr > td > .saved-btn {
+    background-color: gray;
+    color: white;
+}
