--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -76,7 +76,7 @@ th, td {
 }
 
 .now {
-    color: #333333;
+    color: grey;
     font-weight: 900;
 }
 
@@ -91,7 +91,7 @@ th, td {
 }
 
 .table-d2-list > table > .list-tb-body > tr > td > .detail-btn {
-    background-color: #D1C2E9;
+    background-color: skyblue;
     color: white;
 }
 
@@ -99,6 +99,32 @@ th, td {
     height: 100px;
 }
 
+#reservation-detail-table > tbody > tr > .detail-menu-name {
+    font-weight: 500;
+}
+
 #reservation-detail-table > tbody > tr > td:first-child {
-    border-right: 1px solid #dddddd;
+    border-right: 1px solid whitesmoke;
+}
+
+
+#reservation-detail-table > tbody > tr > td > .detail-btn {
+    background-color: skyblue;
+    color: white;
+}
+
+#reservation-detail-table > tbody > tr > .reservation-detail-info {
+    font-size: 20px;
+}
+
+#remaining-time-div {
+    font-size: 25px;
+    font-weight: bold;
+}
+
+#remaining-time-div > .qr-btn {
+    background-color: grey;
+    color: white;
+    width: 200px;
+    height: 50px;
 }
