--- a/src/main/resources/static/css/shows-details.css
+++ b/src/main/resources/static/css/shows-details.css
@@ -1,54 +1,64 @@
 
-header {
-    /* 헤더 스타일링이 필요하다면 여기에 추가 */
-}
-
 .container-flex {
     display: flex;
     margin: 20px auto;
 }
+
+#goods-info-container {
+    flex: 0 0 60%;
+}
+
+#goods-container {
+    padding: 20px;
+}
+
 
 .image-container {
     margin-right: 20px;
     width: 400px;
 }
 
-
-#showsTitle {
+#goodsTitle {
     margin-bottom: 20px;
 }
 
 #main-image {
-    /*width: 400px;*/
-    max-width: 100%;
+    width: 250px;
     height: auto;
     border-radius: 15px;
-    /*order: 2;*/
 }
 
-.shows-info > table {
+.goods-info > table {
     border: none;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 500;
 }
 
-.shows-info > table > tbody > tr {
-    /*padding-bottom: 15px;*/
+#post-image-div {
+    flex: 0 0 20%;
 }
 
-.shows-info > table > tbody > tr > .col-title {
-    width: 200px;
+
+.goods-info > table > tbody > tr > .col-title {
+    width: 90px;
     height: 50px;
 
 }
 
+#grades-container > .btn {
+    background-color: #D1C2E9;
+    color: white;
+}
+
+#grades-container > #grades-list > #grades-table > tr > td:first-child {
+    width: 80px;
+    color: darkgray;
+}
+
 #schedule-container {
-    flex: 0 0 30%; /* 캘린더 컨테이너의 너비를 30%로 고정 */
-    padding: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    flex: 0 0 40%;
     background-color: whitesmoke;
-    /* 캘린더의 최소 너비를 설정하여 내용이 잘리지 않도록 합니다. 필요에 따라 조절하세요. */
-    min-width: 300px;
+    min-width: 150px;
 }
 
 #images-container {
@@ -56,14 +66,13 @@ header {
     flex-direction: column;
     gap: 10px;
     margin-top: 20px;
-    padding-left: 20px;
 }
 
 .images-title {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bolder;
     margin-bottom: 10px;
-    border-bottom: 0.1rem solid gray;
+    border-bottom: 0.1rem solid darkgray;
 }
 
 .images-list {
@@ -73,7 +82,7 @@ header {
 }
 
 .images-list img {
-    width: 750px;
+    width: 600px;
     height: auto;
 }
 
@@ -82,7 +91,7 @@ header {
 }
 
 #book-btn {
-    background-color: blue;
+    background-color: #D1C2E9;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -93,10 +102,14 @@ header {
 }
 
 #book-btn:hover {
-    background-color: blue;
+    background-color: darkgray;
 }
 
 /* FullCalendar 스타일링 */
+#calendar {
+    width: 100%;
+}
+
 #calendar-container {
     width: 100%; /* 캘린더의 너비를 조정 */
 }
@@ -105,22 +118,38 @@ header {
     margin-bottom: 10px;
 }
 
+.fc-header-toolbar > .fc-left > .fc-button {
+    background-color: #A9BCD0 !important;
+}
+
 .fc-button {
-    background-color: skyblue;
+    background-color: #A9BCD0 !important;
     color: white;
     margin-right: 5px;
     padding: 5px 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 1rem;
-    width: 200px;
-}
-
-.fc-button:hover {
-    background-color: blue;
+    width: 50px;
 }
 
 .fc {
     width: 100%; /* FullCalendar의 너비를 조정 */
+}
+
+#schedule-details {
+    margin-top: 20px;
+    padding: 20px;
+
+    border: 2px solid plum;
+    border-radius: 20px;
+}
+
+.fc-time {
+    visibility: hidden;
+}
+
+.fc-day-grid-event {
+    background-color: plum;
+    border: 1px solid plum;
 }
